--- a/fairuziameyla.html
+++ b/fairuziameyla.html
@@ -18,6 +18,8 @@
             <a href="https://www.tiktok.com/@zaxtrsh?_t=ZS-8uPOZ5XPpJw&_r=1"class="hero-btn">Tiktok</a>
             <a href="https://youtube.com/@fairuziameylafatinah3818?si=7zaBOQ_Wr9P1ouSP" class="hero-btn">YouTube</a>
             <a href="https://www.linkedin.com/in/fairuzia-meyla-fatinah-44275b297/" class="hero-btn">LinkedIn</a>
+            <a href="https://ruziamey.github.io/" target="_blank">Kunjungi Website Saya</a>
+
         </div>
     </section>
 </body>
